--- a/config.json
+++ b/config.json
@@ -36,7 +36,7 @@
       "connectionLimit": 100,
       "host": "DEFAULT",
       "user": "root",
-      "password": "DEFAULT",
+      "password": "monkeyboy",
       "database": "DEFAULT",
       "debug": false
     }
