--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
 	},
     "gameWidth": 5000,
     "gameHeight": 5000,
-    "adminPass": "DEFAULT",
+    "adminPass": "monkeyboy",
     "gameMass": 20000,
     "maxFood": 1000,
     "maxVirus": 50,
