--- a/config.json
+++ b/config.json
@@ -3,9 +3,9 @@
     "port": 3000,
     "logpath": "logger.php",
     "foodMass": 1,
-    "fireFood": 20,
+    "fireFood": 3,
     "limitSplit": 64,
-    "defaultPlayerMass": 10,
+    "defaultPlayerMass": 50,
 	"virus": {
     "fill": "#33ff33",
   	"stroke": "#19D119",
@@ -16,12 +16,12 @@
         },
 		"splitMass": 180
 	},
-    "gameWidth": 5000,
-    "gameHeight": 5000,
+    "gameWidth": 1000
+    "gameHeight": 1000,
     "adminPass": "monkeyboy",
     "gameMass": 90000,
-    "maxFood": 10000,
-    "maxVirus": 50,
+    "maxFood": 1000,
+    "maxVirus": 0,
     "slowBase": 4.5,
     "logChat": 0,
     "networkUpdateFactor": 40,
